--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body {background-color: burlywood;
  
   
 
-.notice{background-color:red;
+.notice{background-color:#0D0A22;
 font-size: 40px;
 padding: 10px 15px 10px 15px;
+color: #ADB0B1;
   
 }
 
