--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 .heading{text-align: center;
-  
-}
-body {background-color: burlywood;
-}
+color: #2F2CBF;
+width: 300px;
+height: 30px;
+padding: 25px;
+border: 2px double;
+border-radius: 10px;
+text-shadow: 5px 5px 10px rgba(31, 203, 181, 1);
+
+ }
+body{background-color: burlywood;
+ }
 .banner {border-radius: 15px;
   width: 100%;
   height: 350px; /* Good average */
