--- a/style.css
+++ b/style.css
@@ -1,6 +1,46 @@
+    /* Navbar container */
+    .navbar {
+      background-color: #333;
+      overflow: hidden;
+    }
+
+    /* Links */
+    .navbar a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+    }
+
+    /* Hover effect */
+    .navbar a:hover {
+      background-color: #575757;
+    }
+
+    /* Hamburger menu (hidden by default) */
+    .icon {
+      display: none;
+      float: right;
+      font-size: 20px;
+      padding: 14px 20px;
+      cursor: pointer;
+      color: white;
+    }
+
+    /* Responsive: screen width <= 600px */
+    @media screen and (max-width: 600px) {
+      .navbar a {display: none;}   /* hide links */
+      .navbar a.icon {
+        display: block;           /* show icon */
+      }
+    }
+
 .logo{width: 100px;
 height: 100px;
 border-radius: 50%;
+margin: 10px;
   
 }
 
