--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
       margin: 15px;
     }
     .logo-container span {
-      font-size: 40px;#2BA878
+      font-size: 40px;
       
       color:  #0F6EE1EB;
       font-family: Poppins;
